--- a/draft.ipynb
+++ b/draft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,6 +362,354 @@
     "    plt.plot(np.concatenate([eneg_range_1,eneg_range_2]),type[5],label=\"15 km\")\n",
     "    plt.legend()\n",
     "    plt.ylim(0,1.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def flavor_to_index(a,b):\n",
+    "    if a == \"e\":\n",
+    "        index_a=0\n",
+    "    elif a == \"mu\":\n",
+    "        index_a=1\n",
+    "    elif a == \"tau\":\n",
+    "        index_a=2\n",
+    "    else:\n",
+    "        raise ValueError(\"Non existing neutrino flavor for initial state.\")\n",
+    "    \n",
+    "    if b == \"e\":\n",
+    "        index_b=0\n",
+    "    elif b == \"mu\":\n",
+    "        index_b=1\n",
+    "    elif b == \"tau\":\n",
+    "        index_b=2\n",
+    "    else:\n",
+    "        raise ValueError(\"Non existing neutrino flavor for final state.\")\n",
+    "    \n",
+    "    return index_a,index_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta_12= 33.45  #degrees\n",
+    "theta_23= 42.1   #degrees\n",
+    "theta_13= 8.62   #degrees\n",
+    "\n",
+    "delta_cp= 90    #degrees\n",
+    "\n",
+    "Dm_21   = 7.42*10**(-5) #eV^2\n",
+    "\n",
+    "#Normal ordering\n",
+    "Dm_31_no= 2.51*10**(-3) #eV^2\n",
+    "Dm_32_no= 2.51*10**(-3) #eV^2\n",
+    "\n",
+    "#Inverse ordering\n",
+    "Dm_31_io= -2.49*10**(-3) #eV^2\n",
+    "Dm_32_io= -2.49*10**(-3) #eV^2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def D_mass(i,j,ordering=\"NO\"): #for ordering: NO is normal ordering and IO inverse ordering\n",
+    "    if i==j:\n",
+    "        return ValueError(\"Have to find out what to do with that\")\n",
+    "    elif i==1:\n",
+    "        if j==2:\n",
+    "            return -Dm_21\n",
+    "        elif j==3:\n",
+    "            if ordering==\"NO\":\n",
+    "                return -Dm_31_no\n",
+    "            else:\n",
+    "                return -Dm_31_io\n",
+    "    elif i==2 :\n",
+    "        if j==1:\n",
+    "            return Dm_21\n",
+    "        elif j==3:\n",
+    "            if ordering==\"NO\":\n",
+    "                return -Dm_32_no\n",
+    "            else:\n",
+    "                return -Dm_32_io\n",
+    "    elif i==3:\n",
+    "        if j==1:\n",
+    "            if ordering==\"NO\":\n",
+    "                return Dm_31_no\n",
+    "            else:\n",
+    "                return Dm_31_io\n",
+    "        elif j==2:\n",
+    "            if ordering==\"NO\":\n",
+    "                return Dm_32_no\n",
+    "            else:\n",
+    "                return Dm_32_io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D_m_21=Symbol(\"D_m_21\",real=True)\n",
+    "D_m_31=Symbol(\"D_m_31\",real=True)\n",
+    "D_m_32=Symbol(\"D_m_32\",real=True)\n",
+    "\n",
+    "L=Symbol(\"L\",real=True,positive=True)\n",
+    "E_nu=Symbol(\"E_nu\",real=True)\n",
+    "\n",
+    "def D_mass_param(i,j):\n",
+    "    if i==j:\n",
+    "        return ValueError(\"Probably 0 but not sure yet...\")\n",
+    "    elif i==1:\n",
+    "        if j==2:\n",
+    "            return -D_m_21\n",
+    "        elif j==3:\n",
+    "            return -D_m_31\n",
+    "    elif i==2 :\n",
+    "        if j==1:\n",
+    "            return D_m_21\n",
+    "        elif j==3:\n",
+    "            return -D_m_32\n",
+    "    elif i==3:\n",
+    "        if j==1:\n",
+    "            return D_m_31\n",
+    "        elif j==2:            \n",
+    "            return D_m_32\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def norm(z):\n",
+    "    return sqrt(re(z)**2+im(z)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Prob_a_to_b_alt(a,b):\n",
+    "    index_a,index_b=flavor_to_index(a,b)\n",
+    "\n",
+    "    fst_rhs=0\n",
+    "    U=PMNS_param_matrix()\n",
+    "    for i in [0,1,2]:\n",
+    "        fst_rhs+=(norm(U[index_b,i])**2)* norm(U[index_a,i])**2\n",
+    "\n",
+    "    #print(fst_rhs)\n",
+    "\n",
+    "    scd_rhs=0\n",
+    "    for i in [0,1,2]:\n",
+    "        for j in [0,1,2]:\n",
+    "            if i>j:\n",
+    "                scd_rhs+=U[index_b,i]*conjugate(U[index_a,i])*conjugate(U[index_b,j])*U[index_a,j]*exp((D_mass_param(i+1,j+1))*L/(2*E_nu))\n",
+    "\n",
+    "    return fst_rhs+(2*re(scd_rhs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thi_12=Symbol(\"thi_12\",real=True)\n",
+    "thi_23=Symbol(\"thi_23\",real=True)\n",
+    "thi_13=Symbol(\"thi_13\",real=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{\\left(1 - \\cos{\\left(4 thi_{12} \\right)}\\right) \\left(\\cos{\\left(2 thi_{13} \\right)} + 1\\right)^{2} e^{\\frac{D_{m 21} L}{2 E_{\\nu}}}}{16} + 2 e^{\\frac{D_{m 31} L}{2 E_{\\nu}}} \\sin^{2}{\\left(thi_{13} \\right)} \\cos^{2}{\\left(thi_{12} \\right)} \\cos^{2}{\\left(thi_{13} \\right)} + 2 e^{\\frac{D_{m 32} L}{2 E_{\\nu}}} \\sin^{2}{\\left(thi_{12} \\right)} \\sin^{2}{\\left(thi_{13} \\right)} \\cos^{2}{\\left(thi_{13} \\right)} + \\sin^{4}{\\left(thi_{12} \\right)} \\cos^{4}{\\left(thi_{13} \\right)} + 1.0 \\sin^{4}{\\left(thi_{13} \\right)} + \\cos^{4}{\\left(thi_{12} \\right)} \\cos^{4}{\\left(thi_{13} \\right)}$"
+      ],
+      "text/plain": [
+       "(1 - cos(4*thi_12))*(cos(2*thi_13) + 1)**2*exp(D_m_21*L/(2*E_nu))/16 + 2*exp(D_m_31*L/(2*E_nu))*sin(thi_13)**2*cos(thi_12)**2*cos(thi_13)**2 + 2*exp(D_m_32*L/(2*E_nu))*sin(thi_12)**2*sin(thi_13)**2*cos(thi_13)**2 + sin(thi_12)**4*cos(thi_13)**4 + 1.0*sin(thi_13)**4 + cos(thi_12)**4*cos(thi_13)**4"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trigsimp(Prob_a_to_b_alt(e,e).subs([(s_12,sin(thi_12)),(c_12,cos(thi_12)),(c_13,cos(thi_13)),(c_23,cos(thi_23)),(s_13,sin(thi_13)),(s_23,sin(thi_23)),(d_cp,delta_cp)])) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z=exp(-1j*(thi_12-thi_13))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm(z)==norm(conjugate(z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'PMNS_param_matrix' from 'my_functions' (d:\\apatsias\\M1-Bonn\\RWTH\\code\\my_functions.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-8404409faffa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mmy_functions\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPMNS_param_matrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'PMNS_param_matrix' from 'my_functions' (d:\\apatsias\\M1-Bonn\\RWTH\\code\\my_functions.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from my_functions import PMNS_param_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Prob_a_to_b_General' from 'my_functions' (d:\\apatsias\\M1-Bonn\\RWTH\\code\\my_functions.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-58371588a5c6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mmy_functions\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mProb_a_to_b_General\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'Prob_a_to_b_General' from 'my_functions' (d:\\apatsias\\M1-Bonn\\RWTH\\code\\my_functions.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from my_functions import Prob_a_to_b_General"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Prob_a_to_b_General' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-653724520ec3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmy_functions\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mnormal\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mProb_a_to_b_General\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"e\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"mu\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"normal\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0manti\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mProb_a_to_b_General\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"e\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"mu\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"anti\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Prob_a_to_b_General' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from my_functions import *\n",
+    "\n",
+    "normal=Prob_a_to_b_General(\"e\",\"mu\",\"normal\")\n",
+    "anti=Prob_a_to_b_General(\"e\",\"mu\",\"anti\")\n",
+    "\n",
+    "print(\"Prob of normal:\",normal)\n",
+    "print(\"Prob of anti:\",anti)\n",
+    "\n",
+    "print(\"Difference of the two:\",normal-anti)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 is this changed to str?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(a)+\" is this changed to str?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.conjugate()"
    ]
   }
  ],
